--- a/ddp-workspace/projects/ddp-circadia/app.yaml
+++ b/ddp-workspace/projects/ddp-circadia/app.yaml
@@ -1,4 +1,4 @@
-service: crc
+service: circadia
 runtime: python37
 
 # This setting will not matter except to prevent default automatic-scaling which prevents disabling
