--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,8 +38,7 @@ commands:
       - setup-shared-env:
           study_key: << parameters.study_key >>
       - run-linter-check
-      - run-tests:
-          study_key: << parameters.study_key >>
+      - run-tests
       - build-app:
           study_key: << parameters.study_key >>
       - store-app-build
@@ -61,8 +60,7 @@ commands:
           steps:
             - set-deployment-environment
             - run-linter-check
-            - run-tests:
-                study_key: << parameters.study_key >>
+            - run-tests
             - build-app:
                 study_key: << parameters.study_key >>
             - deploy-exploded-build:
@@ -281,14 +279,11 @@ commands:
       - run:
           name: Linter check
           command: |
-            ng lint
-
+            ng lint ddp-sdk
+            ng lint toolkit
+            ng lint $ANGULAR_PROJECT_NAME
   run-tests:
     description: "Run all tests"
-    parameters:
-      study_key:
-        type: string
-        default: "UNKNOWN"
     steps:
       - run:
           name: ng test
