--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,9 @@ references:
       - *npm_cache_key
   # Note: important that values of guids and keys have matching order!"
   study_keys: &study_keys
-    "osteo brain angio mbc testboston mpc prion atcp rarex rgp esc"
+    "osteo brain angio mbc testboston mpc prion atcp rarex rgp esc pancan"
   study_guids: &study_guids
-    "CMI-OSTEO cmi-brain ANGIO cmi-mbc testboston cmi-mpc PRION atcp rarex RGP cmi-esc"
+    "CMI-OSTEO cmi-brain ANGIO cmi-mbc testboston cmi-mpc PRION atcp rarex RGP cmi-esc pancan"
   dispatch_secret_id: &dispatch_secret_id
       app-engine-dispatch
 
@@ -501,6 +501,8 @@ jobs:
           study_key: esc
       - conditionally-launch-build-and-store:
           study_key: prion
+      - conditionally-launch-build-and-store:
+          study_key: pancan
 
   app-build-and-store-job:
     working_directory: *ng_workspace_path
@@ -613,6 +615,9 @@ workflows:
       - deploy-stored-build-job:
           <<: *deploy_branch_filters
           study_key: prion
+      - deploy-stored-build-job:
+          <<: *deploy_branch_filters
+          study_key: pancan
 
   nightly:
     triggers:
@@ -656,3 +661,6 @@ workflows:
       - build-and-deploy-job:
           name: prion-nightly
           study_key: prion
+      - build-and-deploy-job:
+          name: pancan-nightly
+          study_key: pancan
