Ddp 6247 pancan bootstrap (#599)
* DDP-6247 PanCan bootstrap

* DDP-6247 pancan bootstrap

* DDP-6270 remove IrbGuard guard

* DDP-6247 add login

Co-authored-by: Anastasiia_Glushkova <anastasiia.glushkova@clarivate.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,9 @@ references:
       - *npm_cache_key
   # Note: important that values of guids and keys have matching order!"
   study_keys: &study_keys
-    "osteo brain angio mbc testboston mpc prion atcp rarex rgp esc circadia"
+    "osteo brain angio mbc testboston mpc prion atcp rarex rgp esc circadia pancan"
   study_guids: &study_guids
-    "CMI-OSTEO cmi-brain ANGIO cmi-mbc testboston cmi-mpc PRION atcp rarex RGP cmi-esc circadia"
+    "CMI-OSTEO cmi-brain ANGIO cmi-mbc testboston cmi-mpc PRION atcp rarex RGP cmi-esc circadia cmi-pancan"
   dispatch_secret_id: &dispatch_secret_id
       app-engine-dispatch
 
@@ -503,6 +503,8 @@ jobs:
           study_key: prion
       - conditionally-launch-build-and-store:
           study_key: circadia
+      - conditionally-launch-build-and-store:
+          study_key: pancan
 
   app-build-and-store-job:
     working_directory: *ng_workspace_path
@@ -618,6 +620,9 @@ workflows:
       - deploy-stored-build-job:
           <<: *deploy_branch_filters
           study_key: circadia
+      - deploy-stored-build-job:
+          <<: *deploy_branch_filters
+          study_key: pancan
 
   nightly:
     triggers:
@@ -664,3 +669,6 @@ workflows:
       - build-and-deploy-job:
           name: circadia-nightly
           study_key: circadia
+      - build-and-deploy-job:
+          name: pancan-nightly
+          study_key: pancan
