basil: bootstrap angular app

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,9 @@ references:
       - *npm_cache_key
   # Note: important that values of guids and keys have matching order!"
   study_keys: &study_keys
-    "osteo brain angio mbc testboston mpc prion atcp rarex rgp esc cgc circadia pancan"
+    "basil osteo brain angio mbc testboston mpc prion atcp rarex rgp esc cgc circadia pancan"
   study_guids: &study_guids
-    "CMI-OSTEO cmi-brain ANGIO cmi-mbc testboston cmi-mpc PRION atcp rarex RGP cmi-esc cgc circadia cmi-pancan"
+    "basil CMI-OSTEO cmi-brain ANGIO cmi-mbc testboston cmi-mpc PRION atcp rarex RGP cmi-esc cgc circadia cmi-pancan"
 
 # Container for all the builds
 executors:
@@ -466,6 +466,8 @@ jobs:
       - checkout:
           path: *repo_path
       - conditionally-launch-build-and-store:
+          study_key: basil
+      - conditionally-launch-build-and-store:
           study_key: osteo
       - conditionally-launch-build-and-store:
           study_key: brain
@@ -567,6 +569,13 @@ workflows:
 
   deploy-all-apps-workflow:
     jobs:
+      - deploy-stored-build-job:
+          filters:
+            branches:
+              only:
+                - test
+                - staging
+          study_key: basil
       - deploy-stored-build-job: &deploy_branch_filters
           filters:
             branches:
@@ -624,6 +633,9 @@ workflows:
               only:
                 - develop
     jobs:
+      - build-and-deploy-job:
+          name: basil-nightly
+          study_key: basil
       - build-and-deploy-job:
           name: osteo-nightly
           study_key: osteo
