Circadia: add favicon and favicon alert

--- a/ddp-workspace/angular.json
+++ b/ddp-workspace/angular.json
@@ -2326,6 +2326,7 @@
             "aot": true,
             "assets": [
               "projects/ddp-circadia/src/favicon.ico",
+              "projects/ddp-circadia/src/favicon-alert.ico",
               "projects/ddp-circadia/src/assets",
               {
                 "glob": "pepperConfig.js",
