Fix styles for `File Upload` support in ddp-basil

--- a/ddp-workspace/angular.json
+++ b/ddp-workspace/angular.json
@@ -113,6 +113,7 @@
               }
             ],
             "styles": [
+              "projects/ddp-basil/src/theme.scss",
               "projects/ddp-basil/src/styles.scss"
             ],
             "scripts": [
