DDP-6548 allow user to reset the selected value, show suggestions list when user first time focuses on input, fix disabled style for submit button in basil

--- a/ddp-workspace/angular.json
+++ b/ddp-workspace/angular.json
@@ -869,7 +869,9 @@
               "projects/sandbox-app/src/theme.scss",
               "projects/sandbox-app/src/styles.scss"
             ],
-            "scripts": []
+              "scripts": [
+                  "node_modules/stackdriver-errors-js/dist/stackdriver-errors-concat.min.js"
+              ]
           },
           "configurations": {
             "production": {
