--- a/ddp-workspace/tsconfig.json
+++ b/ddp-workspace/tsconfig.json
@@ -125,6 +125,12 @@
     },
     {
       "path": "./projects/ddp-pancan/tsconfig.spec.json"
+    },
+    {
+      "path": "./projects/ddp-brugada/tsconfig.app.json"
+    },
+    {
+      "path": "./projects/ddp-brugada/tsconfig.spec.json"
     }
   ]
 }
