--- a/ddp-workspace/angular.json
+++ b/ddp-workspace/angular.json
@@ -2590,5 +2590,8 @@
     "@schematics/angular:component": {
       "style": "scss"
     }
+  },
+  "cli": {
+    "analytics": "aec2ec9e-dcea-4c9b-8eee-f19198de5878"
   }
 }
