--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,9 @@ references:
       - *npm_cache_key
   # Note: important that values of guids and keys have matching order!"
   study_keys: &study_keys
-    "basil osteo brain angio mbc testboston mpc prion atcp rarex rgp esc cgc circadia pancan"
+    "basil osteo brain angio mbc testboston mpc prion atcp rarex rgp esc cgc circadia pancan brugada"
   study_guids: &study_guids
-    "basil CMI-OSTEO cmi-brain ANGIO cmi-mbc testboston cmi-mpc PRION atcp rarex RGP cmi-esc cgc circadia cmi-pancan"
+    "basil CMI-OSTEO cmi-brain ANGIO cmi-mbc testboston cmi-mpc PRION atcp rarex RGP cmi-esc cgc circadia cmi-pancan brugada"
 
 # Container for all the builds
 executors:
@@ -499,6 +499,8 @@ jobs:
           study_key: circadia
       - conditionally-launch-build-and-store:
           study_key: pancan
+      - conditionally-launch-build-and-store:
+          study_key: brugada
 
   app-build-and-store-job:
     working_directory: *ng_workspace_path
@@ -627,6 +629,9 @@ workflows:
       - deploy-stored-build-job:
           <<: *deploy_branch_filters
           study_key: pancan
+      - deploy-stored-build-job:
+          <<: *deploy_branch_filters
+          study_key: brugada
 
   nightly:
     triggers:
@@ -682,3 +687,6 @@ workflows:
       - build-and-deploy-job:
           name: pancan-nightly
           study_key: pancan
+      - build-and-deploy-job:
+          name: brugada-nightly
+          study_key: brugada
