--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,12 +66,22 @@ commands:
 
   set-deployment-environment:
     description: "Determine working environment"
+    parameters:
+      target_env:
+        type: string
+        default: ""
     steps:
       - run:
           name: Determine environment for branch << pipeline.git.branch >>
           command: |
+            if [ -n "<< parameters.target_env >>" ]
+            then
+              DEPLOY_TARGET_ENV="<< parameters.target_env >>"
+            else
+              DEPLOY_TARGET_ENV="<< pipeline.git.branch >>"
+            fi
 
-            case "<< pipeline.git.branch >>" in
+            case DEPLOY_TARGET_ENV in
               develop)
                 DEPLOY_ENV=dev
                 BUILD_PARAMS=--sourceMap
@@ -89,7 +99,7 @@ commands:
               *)
                 DEPLOY_ENV=dev
                 BUILD_PARAMS=--sourceMap
-                echo "We are going to map << pipeline.git.branch >> to dev environment"
+                echo "Defaulting $DEPLOY_TARGET_ENV to dev environment"
               ;;
             esac
             echo "Setting deployment ENVIRONMENT to $DEPLOY_ENV"
@@ -527,12 +537,41 @@ parameters:
   study_guid:
     type: string
     default: "UNKNOWN"
+  target_env:
+    type: string
+    default: ""
   do-builds:
     type: boolean
     default: false
 
 workflows:
   version: 2
+
+  build-app-on-demand-workflow:
+    when:
+      and:
+        - << pipeline.parameters.do-builds >>
+        - << pipeline.parameters.study_key >>
+        - not:
+            equal: ["UNKNOWN", << pipeline.parameters.study_key >>]
+    jobs:
+      - app-build-and-store-job:
+          filters:
+            branches:
+              ignore:
+                - /^rc.*/
+                - /^hotfix.*/
+
+  deploy-app-on-demand-workflow:
+    when:
+      and:
+        - << pipeline.parameters.study_key >>
+        - << pipeline.parameters.target_env >>
+        - not:
+            equal: ["UNKNOWN", << pipeline.parameters.study_key >>]
+    jobs:
+      - deploy-stored-build-job:
+          study_key: << pipeline.parameters.study_key >>
 
   build-and-deploy-all-apps-workflow:
     unless: << pipeline.parameters.do-builds >>
@@ -571,22 +610,6 @@ workflows:
     jobs:
       - app-build-and-store-job:
           <<: *build-and-store-filters
-
-  build-app-on-demand-workflow:
-    when:
-      and:
-        - << pipeline.parameters.do-builds >>
-        - << pipeline.parameters.study_key >>
-        - not:
-            equal: ["UNKNOWN", << pipeline.parameters.study_key >>]
-    jobs:
-      - app-build-and-store-job:
-          filters:
-            branches:
-              ignore:
-                - /^rc.*/
-                - /^hotfix.*/
-#            study_key: << pipeline.parameters.study_key >>
 
   deploy-all-apps-workflow:
     jobs:
