--- a/ddp-workspace/package.json
+++ b/ddp-workspace/package.json
@@ -32,7 +32,7 @@
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "6.0.0",
     "auth0-js": "9.14.0",
-    "auth0-lock": "^11.27.0",
+    "auth0-lock": "^11.30.6",
     "bootstrap": "3.4.1",
     "classlist.js": "1.1.20150312",
     "core-js": "3.6.5",
@@ -70,7 +70,7 @@
     "jasmine-core": "3.6.0",
     "jasmine-marbles": "0.6.0",
     "jasmine-spec-reporter": "6.0.0",
-    "karma": "5.2.3",
+    "karma": "^6.3.4",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage-istanbul-reporter": "3.0.3",
     "karma-jasmine": "4.0.1",
