--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -549,6 +549,7 @@ workflows:
   version: 2
 
   api-build-and-store-workflow:
+    description: "Build specific study specified in api call"
     when:
       and:
         - equal: ["build-and-store", << pipeline.parameters.api_call >>]
@@ -558,6 +559,7 @@ workflows:
       - app-build-and-store-job
 
   api-deploy-workflow:
+    description: "Deploy a study build to environment specified in api call"
     when:
       and:
         - equal: ["deploy", << pipeline.parameters.api_call >>]
